<resources>
    <string name="app_name">wines</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert sample wine</string>

    <!-- Label for overflow menu option that deletes all wine data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Wines</string>

    <!-- Title for the activity to add a new wine [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_wine">Add a Wine</string>

    <!-- Title for the activity to edit wine [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_wine">Edit Wine</string>

    <!-- Label for editor menu option to save wine and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current wine [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for details overflow menu option that edits the current wine [CHAR LIMIT=20] -->
    <string name="action_edit_wine">Edit Wine</string>

    <!-- Label for name information in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Label for year information in the editor [CHAR LIMIT=30] -->
    <string name="category_year">Year</string>

    <!-- Label for year information in the editor [CHAR LIMIT=30] -->
    <string name="category_winery">Winery</string>

    <!-- Label for year information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for winery email in the editor [CHAR LIMIT=30] -->
    <string name="category_winery_email">Winery Email</string>

    <!-- Label for winery phone in the editor [CHAR LIMIT=30] -->
    <string name="category_winery_phone">Winery Phone</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_name">Wine Name</string>

    <!-- Text hint for year field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_year">Year</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_quantity">Quantity</string>

    <!-- Text hint for winery field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_winery">Winery</string>

    <!-- Text hint for winery email field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_winery_email">Winery Email</string>

    <!-- Text hint for winery phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_wine_winery_phone">Winery Phone</string>

    <!-- Label for editor insert wine fails [CHAR LIMIT=20] -->
    <string name="editor_insert_wine_failed">Error with saving wine</string>

    <!-- Label for editor insert wine successful [CHAR LIMIT=20] -->
    <string name="editor_insert_wine_successful">Wine saved</string>

    <!-- Label for editor wine image loading unsuccessful [CHAR LIMIT=20] -->
    <string name="editor_wine_image_failed">Wine image could not be loaded</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit dry here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a wine [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a wine</string>

    <!-- Toast message in editor when current wine was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_wine_successful">Wine updated</string>

    <!-- Toast message in editor when current wine has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_wine_failed">Error with updating wine</string>

    <!-- Toast message in editor when name field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_name">Can\'t have empty wine name</string>

    <!-- Toast message in editor when winery field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_winery">Can\'t have empty wine winery</string>

    <!-- Toast message in editor when year field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_year">Can\'t have empty wine year</string>

    <!-- Toast message in editor when year entered is less than 1800 [CHAR LIMIT=NONE] -->
    <string name="editor_invalid_wine_year">Wine year can\'t be less than 1800</string>

    <!-- Toast message in editor when quantity field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_quantity">Can\'t have empty wine price</string>

    <!-- Toast message in editor when price field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_price">Can\'t have empty wine price</string>

    <!-- Toast message in editor when winery email field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_email">Can\'t have empty winery email</string>

    <!-- Toast message in editor when winery phone number field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_phone">Can\'t have empty winery phone number</string>

    <!-- Toast message in editor when wine image field is left empty [CHAR LIMIT=NONE] -->
    <string name="editor_require_wine_image">Can\'t have empty wine image</string>

    <!-- Toast message in details activity when no email appavailable to send email [CHAR LIMIT=NONE] -->
    <string name="details_no_email_app">Can\'t find an email app</string>

    <!-- Toast message in details activity when invalid phone number entered [CHAR LIMIT=NONE] -->
    <string name="details_invalid_phone">Invalid phone number. Need 10 digits, no dashes</string>

    <!-- Toast message in details activity when invalid email entered [CHAR LIMIT=NONE] -->
    <string name="details_invalid_email">Invalid email address.</string>

    <!-- Toast message in category activity when a wine has been sold [CHAR LIMIT=NONE] -->
    <string name="category_wine_sold">Wine sold</string>

    <!-- Toast message in category activity when trying to sell wine but stock is 0 [CHAR LIMIT=NONE] -->
    <string name="category_wine_out_of_stock">Wine is out of stock</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current wine [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current wine was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_wine_successful">Wine deleted</string>

    <!-- Toast message in editor when current wine has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_wine_failed">Error with deleting wine</string>

    <!-- Dialog message to ask the user to confirm deleting the current wine [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this wine?</string>

    <!-- Dialog button text for the option to confirm deleting the current wine [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current wine [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    </resources>
