<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_name"
            style="@style/CategoryStyle" />

        <!-- Name field -->
        <TextView
            android:id="@+id/details_wine_name"
            android:hint="@string/hint_wine_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_winery"
            style="@style/CategoryStyle" />

        <!-- Winery field -->
        <TextView
            android:id="@+id/details_wine_winery"
            android:hint="@string/hint_wine_winery"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_year"
            style="@style/CategoryStyle" />

        <!-- Year field -->
        <TextView
            android:id="@+id/details_wine_year"
            android:hint="@string/hint_wine_year"
            android:inputType="textCapWords|number"
            style="@style/EditorFieldStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Quantity field -->
        <TextView
            android:id="@+id/details_wine_quantity"
            android:hint="@string/hint_wine_quantity"
            android:inputType="textCapWords|number"
            style="@style/EditorFieldStyle" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Price field -->
        <TextView
            android:id="@+id/details_wine_price"
            android:hint="@string/hint_wine_price"
            android:inputType="textCapWords|number"
            style="@style/EditorFieldStyle" />

    </LinearLayout>


</LinearLayout>