<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/wine_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wine_image_height"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_a_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_wine_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_name"
                android:inputType="textCapWords" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_winery" />

            <!-- Winery field -->
            <EditText
                android:id="@+id/edit_wine_winery"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_winery"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_year" />

            <!-- Year field -->
            <EditText
                android:id="@+id/edit_wine_year"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_year"
                android:inputType="textCapWords|number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_wine_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_quantity"
                android:inputType="textCapWords|number" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_wine_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_price"
                android:inputType="textCapWords|number" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_winery_email" />

            <!-- Winery email field -->
            <EditText
                android:id="@+id/edit_wine_winery_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_winery_email"
                android:inputType="textCapWords" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_winery_phone" />

            <!-- Winery phone field -->
            <EditText
                android:id="@+id/edit_wine_winery_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_wine_winery_phone"
                android:inputType="textCapWords|number" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>